different highlight strategy on variant menu tags to prevent re-wrap on click

--- a/src/app/views/events/genes/summary/variantMenu.less
+++ b/src/app/views/events/genes/summary/variantMenu.less
@@ -90,8 +90,9 @@
           color: @civicRed !important;
         }
         &.active {
+          background-color: lighten(@civicPurple, 70%);
           .variant-name {
-            font-weight: bold;
+            // font-weight: bold;
           }
         }
 
